# AnyCast

./: README.md  config.yaml.example  pyproject.toml
src/: config.py  downloader.py  main.py
tests/: test_app_name.py  test_youtube_downloader.py
